Implemented Add and Edit functions to the GUI

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,9 @@
 Clean house
 run 5k
-go to gym
+Renew Gym Membership
 clean bag
-evening walk
+do the walk
+Visit Incubator
+Process Veggies
+call dhananjay tomorrow
+
